# the-reef

./: .gitignore  CLAUDE.md  README.md  main.py  package-lock.json  pyproject.toml  screenshot.mjs
.github/workflows/: daily_report.yml  deep_dive.yml  deploy_dashboard.yml  devops-backend.yml  devops-frontend.yml  devops-infrastructure.yml  scanner.yml  stop_loss_monitor.yml  tools-backfill-decisions.yml  tools-db-audit.yml  tools-reset-conviction.yml  tools-seed-history.yml  tools-shark-audit.yml
dashboard/backend/: build.ps1  build.sh  handler.py  requirements.txt  template.yaml
dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/frontend/scripts/: screenshot.js
dashboard/frontend/src/: App.tsx  api.ts  index.css  types.ts
dashboard/frontend/src/components/: AlphaBenchmark.tsx  ConvictionBar.tsx  MetricCard.tsx  MobileNav.tsx  Nav.tsx  (+15 more)
dashboard/infra/: api_gateway.tf  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf
data/: tank_state.json
docs/: README.md  ai-investment-committee.md  architecture-overview.md  automation-cicd.md  operations-runbook.md  security-design.md  serverless-infrastructure.md
the_reef/: crew.py  dashboard.py  main.py
the_reef/brokerage/: performance.py  the_tank.py
the_reef/config/: agents.yaml  tasks.yaml
the_reef/notifications/: sms.py
the_reef/scanner/: monitor.py  pick_signal.py
the_reef/tools/: conviction_tool.py  market_data.py  shark_history_tool.py  tank_tools.py
tools/: backfill_decisions.py  db_audit.py  reset_conviction_points.py  seed_history.py  shark_audit.py
(+8 files in other folders)
