[project]
name = "the-reef"
version = "0.1.0"
description = "The Reef — agentic trading team: Apex Shark PM + hunter/analyst sharks + paper brokerage"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "crewai>=1.14.6",
    "crewai-tools>=1.14.6",
    "openai>=2.38.0",
    "pydantic>=2.12.5",
    "pymongo>=4.17.0",
    "requests>=2.34.2",
    "rich>=14.3.4",
    "schedule>=1.2.2",
    "yfinance>=1.4.1",
]
